--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 
   <packaging>pom</packaging>
   <name>Grimlock 🦖 | CQRS+ES Examples</name>
+  <modules>
+    <module>no-aggregate</module>
+  </modules>
 
   <properties>
     <maven.compiler.source>21</maven.compiler.source>
@@ -17,9 +20,20 @@
     <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven-wrapper-plugin.version>3.2.0</maven-wrapper-plugin.version>
+    <exec-maven-plugin.version>3.1.1</exec-maven-plugin.version>
+    <mainClass>io.grimlock.Main</mainClass>
   </properties>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>${exec-maven-plugin.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
