--- a/aggregate-less/vanilla-jdk/pom.xml
+++ b/aggregate-less/vanilla-jdk/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.grimlock.cqrses</groupId>
-    <artifactId>no-aggregate</artifactId>
+    <groupId>io.grimlock.aggregate.less</groupId>
+    <artifactId>aggregate-less</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>vanilla-jdk</artifactId>
-  <name>Grimlock 🦖 | Vanilla JDK ☕</name>
+  <name>Grimlock 🦖 | CQRS+ES with No Aggregate | Vanilla JDK ☕</name>
 
   <properties>
     <mainClass>src/main/java/SeatBooking.java</mainClass>
