--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
   <packaging>pom</packaging>
   <name>Grimlock 🦖 | CQRS+ES Examples</name>
   <modules>
-    <module>no-aggregate</module>
+    <module>aggregate-less</module>
+    <module>aggregate-plain</module>
+    <module>aggregate-plain/vertx</module>
   </modules>
 
   <properties>
@@ -19,10 +21,25 @@
     <maven.compiler.target>21</maven.compiler.target>
     <maven.compiler.release>21</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <mainClass>io.grimlock.Main</mainClass>
+
+    <vertx.version>4.4.7</vertx.version>
+
     <maven-wrapper-plugin.version>3.2.0</maven-wrapper-plugin.version>
     <exec-maven-plugin.version>3.1.1</exec-maven-plugin.version>
-    <mainClass>io.grimlock.Main</mainClass>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-stack-depchain</artifactId>
+        <version>${vertx.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <pluginManagement>
