adding saintmark project with plain aggregate

--- a/aggregate-plain/pom.xml
+++ b/aggregate-plain/pom.xml
@@ -13,9 +13,10 @@
   <artifactId>aggregate-plain</artifactId>
   <packaging>pom</packaging>
 
-  <name>Grimlock 🦖 | CQRS+ES with Plain Aggregate 🦕</name>
-
+  <name>Grimlock 🦖 | CQRS+ES with Plain Aggregate</name>
   <modules>
+    <module>saintmark-api</module>
+    <module>saintmark-domain</module>
     <module>vertx</module>
   </modules>
 
