--- a/aggregate-plain/hotel-grimlock-adapter/hotel-grimlock-adapter-repository-inmemory/pom.xml
+++ b/aggregate-plain/hotel-grimlock-adapter/hotel-grimlock-adapter-repository-inmemory/pom.xml
@@ -4,13 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.grimlock.aggregate.plain</groupId>
-    <artifactId>aggregate-plain</artifactId>
+    <groupId>io.grimlock.aggregate.plain.adapter</groupId>
+    <artifactId>hotel-grimlock-adapter</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>saintmark-api</artifactId>
-  <name>SaintMark API</name>
-
-
+  <artifactId>hotel-grimlock-adapter-repository-inmemory</artifactId>
+  <name>Hotel Grimlock Adapter Repository InMemory</name>
 </project>
