--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.grimlock</groupId>
-  <artifactId>cqrs-es-examples</artifactId>
+  <groupId>hotel.crystalcity</groupId>
+  <artifactId>hotel-crystalcity</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
-  <name>Grimlock 🦖 | CQRS+ES Examples</name>
+  <name>Crystal City Hotel 🔮 | Parent</name>
   <modules>
-    <module>aggregate-less</module>
-    <module>aggregate-plain</module>
+    <module>cqrs</module>
   </modules>
 
   <properties>
