--- a/hotel-crystalcity-cqrs/hotel-crystalcity-adapter/pom.xml
+++ b/hotel-crystalcity-cqrs/hotel-crystalcity-adapter/pom.xml
@@ -17,7 +17,20 @@
   <name>Crystal City Hotel 🔮 | Parent Adapter</name>
   <modules>
     <module>hotel-crystalcity-adapter-storage-inmemory</module>
+    <module>hotel-crystalcity-adapter-restapi-vertx</module>
   </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.vertx</groupId>
+        <artifactId>vertx-stack-depchain</artifactId>
+        <version>4.5.3</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
